--- a/package.json
+++ b/package.json
@@ -59,8 +59,8 @@
     "@commitlint/config-conventional": "^17.0.3",
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
-    "@fortawesome/fontawesome-svg-core": "^6.1.1",
-    "@fortawesome/free-solid-svg-icons": "^6.1.1",
+    "@fortawesome/fontawesome-svg-core": "^6.1.2",
+    "@fortawesome/free-solid-svg-icons": "^6.1.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@jest/core": "^28.1.3",
     "@mui/base": "^5.0.0-alpha.90",
@@ -77,8 +77,8 @@
     "@types/lodash": "^4.14.182",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
-    "@typescript-eslint/eslint-plugin": "^5.30.7",
-    "@typescript-eslint/parser": "^5.30.7",
+    "@typescript-eslint/eslint-plugin": "^5.31.0",
+    "@typescript-eslint/parser": "^5.31.0",
     "babel-jest": "^28.1.3",
     "babel-loader": "^8.2.5",
     "babel-plugin-lodash": "^3.3.4",
@@ -99,7 +99,7 @@
     "husky": "^8.0.1",
     "jest": "^28.1.2",
     "jest-watch-yarn-workspaces": "^1.1.0",
-    "lerna": "^5.1.6",
+    "lerna": "^5.2.0",
     "less": "^4.1.3",
     "lint-staged": "^13.0.3",
     "minimist": "^1.2.6",
@@ -159,7 +159,7 @@
   },
   "dependencies": {
     "@ethersproject/providers": "^5.6.8",
-    "@types/bootstrap": "^5.1.13",
+    "@types/bootstrap": "^5.2.0",
     "@types/react-headroom": "^2.2.2",
     "a": "^2.1.2",
     "ahooks": "^3.5.2",
@@ -167,8 +167,8 @@
     "is-in-browser": "^2.0.0",
     "react-headroom": "^3.2.0",
     "react-toastify": "^9.0.5",
-    "sass": "^1.53.0",
+    "sass": "^1.54.0",
     "swr": "^1.3.0",
-    "zustand": "^4.0.0-rc.3"
+    "zustand": "^4.0.0"
   }
 }
