--- a/package.json
+++ b/package.json
@@ -87,6 +87,7 @@
     "commitizen": "^4.2.5",
     "cz-conventional-changelog": "^3.3.0",
     "cz-customizable": "^6.9.1",
+    "esbuild": "^0.15.8",
     "eslint": "^8.20.0",
     "eslint-config-alloy": "^4.6.2",
     "eslint-config-prettier": "^8.5.0",
@@ -115,6 +116,8 @@
     "react-icons": "^4.3.1",
     "react-loading": "^2.0.3",
     "rollup": "^2.77.0",
+    "rollup-plugin-dts": "^4.2.2",
+    "rollup-plugin-esbuild": "^4.10.1",
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "rollup-plugin-postcss": "^4.0.2",
     "rollup-plugin-progress": "^1.1.2",
